css/custom.css
/* GENERAL CHANGES */
body {
	-webkit-font-smoothing: antialiased;
	overflow-x: hidden;
}
body.noscroll {
	overflow-y: hidden;
	overflow-x: hidden;
}

.orbit-bullets {
	display: none;
}
.margin {
	width: 100%;
	position: relative;
	margin: 40px auto;
}
.padding {
	position: relative;
	width: 100%;
	padding: 40px;
	clear: both;
}
.margin-bottom-80 {
	margin-bottom: 80px;
}
.hr-alt {
	border-bottom: 2px solid #000;
	width: 60%;
	margin: 40px auto;
	position: relative;
}
h1, h2, h3, h4, h5, h6 {
	font-weight: normal;
}
.subheader {
	margin-bottom: 2.5em;
}
/*_______BUTTONS_____ */
button, .button {
	border-style: none;
	border-width: 0;
	font-weight: normal;
	webkit-box-shadow: none;
	box-shadow: none;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;
}
button, .button.black {
	background-color: #3e3e3e;
	border: 2px solid #3e3e3e;
}
button, .button.transparent {
	background-color: transparent;
	border: 2px #fff solid;
}
.button.transparent:hover {
	background-color: #fff;
	color: #3e3e3e;
}


/*_______HEADER______ */

.top-bar-section {
	padding: 0;
	display: block;
}
.top-bar {
	background: #fff;
}
.top-bar-section ul li > a {
	background: #fff !important;
	color: #333;
}
.top-bar-section ul li.hover > a {
	color: #999;
}

.contain-to-grid {
	background: #fff;
}
.top-bar .name h1 a {
	color: #333;
}
.top-bar.expanded .title-area {
	background: #fff;
}
.top-bar .toggle-topbar.menu-icon a span {
	-webkit-box-shadow: 0 10px 0 1px #333, 0 16px 0 1px #333, 0 22px 0 1px #333;
	box-shadow: 0 10px 0 1px #333, 0 16px 0 1px #333, 0 22px 0 1px #333;
}
.top-bar.expanded .toggle-topbar a {
	color: #333;
}
.top-bar .toggle-topbar.menu-icon a {
	color: #333;
}
.hero {
	padding: 0;
}

.second-bkg {
	background: #fafafa;
}

.large-left-bottom {
	padding-left: 0;
	padding-bottom: 0.9375em; 
}
.large-left-bottom .blogg-caption {
	bottom: 14px;
}
.large-left-top {
	padding-left: 0;
}


.horizontal-text {
	display: table;
	height: 100px;
}
.horizontal-text p {
	display: table-cell;
	vertical-align:middle;
}
.h-text-center {
	position: absolute;
	top: 0;
	z-index: 1;
	width: 40%;
	height: 100%;
	left: 30%;
	display: table;
}
.h-text-center-box {
	border: none;
	color: #fff !important;
	display: table-cell;
	vertical-align: middle;
	text-align: center;
}
.h-text-center-box h1 {
	color: #fff;
}

.orbit-container .orbit-slides-container > * {
	height: 100%;
}


section {
	padding: 100px 0;
	margin: 0 auto;
	display: inline-block;
	width: 100%;
}

/*_______competence_____*/
.competence {
	padding-bottom: 0;
}
/* ______BLOGG_______ */

.blogg:hover .icon-stack{
	opacity: 1;
}
.blogg {
	overflow: hidden;
}
.blogg-grid .columns {
	padding-bottom: 0.9375em;
	padding-left: 0.9375em;
	padding-right: 0;
}
.blogg-caption .columns {
	padding-right: 0.9375em;
	padding-left: 0.9375em;
	padding-top: 0;
	padding-bottom: 0;
}
/*.older-post .columns:nth-child(even) {
	padding: 0 0.46875em 0;
}*/
.blogg-grid {
	padding-right: 0.9375em;
	padding-left: 0;
}
.blogg-page {
	padding-top: 0;
}
.circle {
	border: 1px solid #fff;
	border-radius: 1000px;
}
.icon-stack {
	opacity: .5
}
.blogg-caption {
	position: absolute;
	bottom: 14px;
	background-color: #67A292;
	width: 100%;
	padding: 6px 0 5px 0;
}
.blogg:nth-child(3n+1) .blogg-caption {
	background-color: #7aaaa7;
}
.blogg:nth-child(even) .blogg-caption {
	background-color: #658f95;
}
.blogg-caption h4, .blogg-caption p, .blogg-caption .icon-stack {
	color: #fff;
	margin: 0;
}
.blogg-caption ul, .blogg-caption p  {
	margin-bottom: 0;
}




.utvalda-projekt .large-6 {
	padding: 0.9375em;
	margin: 0;
}
.utvalda-projekt .large-6 h3 {
	margin-top: 180px;
}
.bildspel-text-container {
  position: absolute;
  top: 0;
  z-index: 1;
  width: 70%;
  height: 100%;
  left: 15%;
  display:table;
}
.bildspel-text-container h1 {
  border: none;
  color: #fff;
  display: table-cell;
  vertical-align: middle;
  text-align: center;
}


.icon-8x {
	font-size: 8em;
}

.maps img{
	width: 100%;
}

/* HOOVER */
.grid {
	margin: 0.9375em 0;
}
.grid figure {
	margin: 0;
	position: relative;
}

.grid figure img {
	max-width: 100%;
	display: block;
	position: relative;
}

.grid figcaption {
	position: absolute;
	top: 0;
	left: 0;
	padding: 20px;
	background: rgba(106, 117, 121, 0.6);
	color: #ed4e6e;
}

.grid figcaption h3 {
	margin: 0;
	padding: 0;
	color: #fff;
}

.grid figcaption span:before {
	content: '';
}

.grid figcaption a {
	text-align: center;
	padding: 5px 10px;
	border-radius: 2px;
	display: inline-block;
	background: #ed4e6e;
	color: #fff;
}

/* Caption Style 1 */
.cs-style-1 figcaption {
	height: 100%;
	width: 100%;
	opacity: 0;
	text-align: center;
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	backface-visibility: hidden;
	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
	-moz-transition: -moz-transform 0.3s, opacity 0.3s;
	transition: transform 0.3s, opacity 0.3s;
}

.no-touch .cs-style-1 figure:hover figcaption,
.cs-style-1 figure.cs-hover figcaption {
	opacity: 1;
	-webkit-transform: translate(15px, 15px);
	-moz-transform: translate(15px, 15px);
	-ms-transform: translate(15px, 15px);
	transform: translate(15px, 15px);
}

.cs-style-1 figcaption h3 {
	margin-top: 70px;
}

.cs-style-1 figcaption span {
	display: block;
}

.cs-style-1 figcaption a {
	margin-top: 30px;
}



/* HUR VI JOBBAR */
/* ============= */

.work-process .large-4 {
	height: 300px;
}
.work-blob {
	background: #99B5BE;
	position: relative;
	width: 233px;
	height: 233px;
	margin: 0 auto;
	border-radius: 117px;
	-webkit-transition: 0.25s 0.25s all ease-out;
}
.work-blob:hover {
	border-radius: 5px;
	height: 300px;
	width: 300px;
	-webkit-transition: 0.25s all ease-out;
}
.work-blob img {
	opacity: 1;
	-webkit-transition: 0.25s 0.35s opacity ease-out;
}
.work-blob:hover img {
	opacity: 0;
	-webkit-transition: 0.25s opacity ease-in;
}
/* ... */

